--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fcc-learn-npm-package-json",
+	"name": "Cristian Velasco",
 	"author": "Cristian Velasco",
 	"dependencies": {
 		"express": "^4.14.0"
