--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "Cristian Velasco",
-	"author": "Cristian Velasco",
+	"name": "cristian624",
+	"author": "cristian624",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
